--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.17.3",
     "aos": "^2.3.4",
     "countup.js": "^2.8.0",
     "react": "^18.2.0",
